# alephone

./: .gitignore  .gitmodules  AUTHORS  Aleph One Classic SDL.mcp  AlephOne-m2-demo.spec  AlephOne-minf-demo.spec  AlephOne.mcp  AlephOne.mcp.xml  AlephOne.plc  AlephOne.spec  AlephOne.spec.in  AppleGL Extra Blending Modes  AppleGL_Extra_Blending_Modes  CONTRIBUTING.md  Changes_(Ben_Thompson)  Changes_(Bo_Lindbergh_Jan 25)  Changes_(Br_fin_Jan_27)  Changes_(Loren_Petrich)  Changes_Benad  Dockerfile.hub  FaderClassic.mcp  INSTALL.BeOS  INSTALL.MacOSX  INSTALL.MacOSX.Carbon  INSTALL.Unix  INSTALL.Windows  Lua.mcp  M123_Converter.mcp  MML.html  Makefile.BeOS  Makefile.am  Marathon_2_Source_ReadMe  ModelViewer.mcp  Pfhormz Instructions.txt  Pfhormz.mcp  README  README.md  SDL_Net_Carbon.sit  Speex.mcp  THANKS  (+16 more)
Source_Files/: AlephOne.sln  AlephOne.vcxproj  AlephOne.vcxproj.filters  Makefile.am  main.cpp  shell.cpp  shell.h  shell_macintosh.h  shell_misc.cpp  shell_options.cpp  shell_options.h  shell_sdl.h  vcpkg.json
Source_Files/CSeries/: BStream.cpp  BStream.h  FilmProfile.cpp  FilmProfile.h  Makefile.am  NibsUiHelpers.h  buildprogram  byte_swapping.cpp  byte_swapping.h  converter.cpp  converter.h  csalerts.cpp  csalerts.h  csalerts.mm  csalerts_sdl.cpp  cscluts.cpp  cscluts.h  cscluts_sdl.cpp  csdialogs.cpp  csdialogs.h  csdialogs_macintosh.cpp  csdialogs_sdl.cpp  cseries.h  csfiles.cpp  csfiles.h  csfiles_beos.cpp  csfonts.cpp  csfonts.h  csfonts_sdl.cpp  cskeys.h  csmacros.h  csmisc.cpp  csmisc.h  csmisc_sdl.cpp  cspaths.h  cspaths.mm  cspaths_sdl.cpp  cspixels.h  csstrings.cpp  csstrings.h  (+21 more)
Source_Files/Expat/: Makefile.am  xmlparse.c  xmltok.c  xmltok.h  xmltok_impl.c
Source_Files/FFmpeg/: Makefile.am  Movie.cpp  Movie.h  SDL_ffmpeg.c  SDL_ffmpeg.h  ffcompat.h
Source_Files/Files/: AStream.cpp  AStream.h  FileHandler.cpp  FileHandler.h  FileHandler_SDL.cpp  Makefile.am  Packing.cpp  Packing.h  SDL_rwops_ostream.cpp  SDL_rwops_ostream.h  SDL_rwops_zzip.c  SDL_rwops_zzip.h  WadImageCache.cpp  WadImageCache.h  crc.cpp  crc.h  extensions.h  filetypes_macintosh.cpp  find_files.cpp  find_files.h  find_files_sdl.cpp  game_wad.cpp  game_wad.h  import_definitions.cpp  mac_rwops.cpp  mac_rwops.h  preprocess_map_mac.cpp  preprocess_map_sdl.cpp  preprocess_map_shared.cpp  resource_manager.cpp  resource_manager.h  tags.h  wad.cpp  wad.h  wad_macintosh.cpp  wad_prefs.cpp  wad_prefs.h  wad_prefs_macintosh.cpp  wad_sdl.cpp
Source_Files/GameWorld/: Makefile.am  TickBasedCircularQueue.h  devices.cpp  dynamic_limits.cpp  dynamic_limits.h  editor.h  effect_definitions.h  effects.cpp  effects.h  ephemera.cpp  ephemera.h  flood_map.cpp  flood_map.h  interpolated_world.cpp  interpolated_world.h  item_definitions.h  items.cpp  items.h  lightsource.cpp  lightsource.h  map.cpp  map.h  map_constructors.cpp  marathon2.cpp  media.cpp  media.h  media_definitions.h  monster_definitions.h  monsters.cpp  monsters.h  pathfinding.cpp  physics.cpp  physics_models.h  placement.cpp  platform_definitions.h  platforms.cpp  platforms.h  player.cpp  player.h  projectile_definitions.h  (+10 more)
Source_Files/Input/: ISp_Support.cpp  ISp_Support.h  Makefile.am  joystick.h  joystick_sdl.cpp  mouse.cpp  mouse.h  mouse_cocoa.cpp  mouse_cocoa.h  mouse_sdl.cpp
Source_Files/LibNAT/: LibNat.vcxproj  LibNat.vcxproj.filters  Makefile.am  error.h  http.c  http.h  libnat.h  os.h  os_common.c  os_common.h  os_unix.c  os_win.c  packages.config  ssdp.c  upnp.c  utility.c  utility.h  vcpkg.json
Source_Files/Lua/: Lua.vcxproj  Lua.vcxproj.filters  Makefile.am  language_definition.h  lapi.c  lapi.h  lauxlib.c  lauxlib.h  lbaselib.c  lcode.c  lcode.h  ldblib.c  ldebug.c  ldebug.h  ldo.c  ldo.h  ldump.c  lfunc.c  lfunc.h  lgc.c  lgc.h  linit.c  liolib.c  llex.c  llex.h  llimits.h  lmathlib.c  lmem.c  lmem.h  lobject.c  lobject.h  lopcodes.c  lopcodes.h  loslib.c  lparser.c  lparser.h  lstate.c  lstate.h  lstring.c  lstring.h  (+41 more)
Source_Files/M123_Converter/: M123_Shell_Macintosh.cpp
Source_Files/Misc/: ActionQueues.cpp  ActionQueues.h  AlephSansMono-Bold.h  AnimatedTextures.cpp  AnimatedTextures.h  ChaseCam.cpp  ChaseCam.h  CircularByteBuffer.cpp  CircularByteBuffer.h  CircularQueue.h  ColorParser.cpp  ColorParser.h  Console.cpp  Console.h  CourierPrime.h  CourierPrimeBold.h  CourierPrimeBoldItalic.h  CourierPrimeItalic.h  Crosshairs.cpp  Crosshairs.h  Crosshairs_SDL.cpp  DamageParser.cpp  DamageParser.h  DefaultStringSets.cpp  DefaultStringSets.h  DejaVuCondensedSansBold.h  FileHandler.cpp  FileHandler.h  FileHandler_Mac.cpp  FileHandler_Mac.h  FileHandler_SDL.cpp  FontHandler.cpp  FontHandler.h  GrowableList.h  HUDRenderer.cpp  HUDRenderer.h  HUDRenderer_OGL.cpp  HUDRenderer_OGL.h  HUDRenderer_SW.cpp  HUDRenderer_SW.h  (+294 more)
Source_Files/ModelView/: Dim3_Loader.cpp  Dim3_Loader.h  MV_Shell.cp  Makefile.am  Model3D.cpp  Model3D.h  ModelRenderer.cpp  ModelRenderer.h  QD3D_Loader.cpp  QD3D_Loader.h  StudioLoader.cpp  StudioLoader.h  WavefrontLoader.cpp  WavefrontLoader.h
Source_Files/Network/: CNetwork.cpp  CNetwork.h  CarbonSndPlayDB.c  CarbonSndPlayDB.h  ConnectPool.cpp  ConnectPool.h  HTTP.cpp  HTTP.h  Makefile.am  NetworkGameProtocol.h  NetworkInterface.cpp  NetworkInterface.h  Pinger.cpp  Pinger.h  PortForward.cpp  PortForward.h  (+70 more)
aleph/: Aleph One Classic SDL.mcp  AlephOne-m2-demo.spec  AlephOne.mcp  FaderClassic.mcp  INSTALL.MacOSX.Carbon  INSTALL.Unix  INSTALL.Windows  Lua.mcp  Makefile.BeOS  Makefile.am  Pfhormz Instructions.txt  Pfhormz.mcp  README  SDL_Net_Carbon.sit  Speex.mcp  aleph.dsw  aleph.sln  aleph.vcproj  marathon.dtd
data/: Carnage_Messages.mml  Fonts  Interface_Rects.mml  Makefile.am  Pfhortran_Language_Definition  ProFontAOLicense.txt  README  Resources  Software_Transparent_Liquids.mml  Text_Strings.mml  Transparent_Liquids.mml  Transparent_Sprites.mml  alephone.xml
tools/: Makefile.am  MapChunker.mcp  MapChunker.rsrc  MapChunkerMain.cpp  MapHandler.mcp  MapHandler.rsrc  MapHandlerMain.cpp  Set_BE_Type.sh  build_dmg.sh  diskimage.pl  dumprsrcmap.cpp  dumpwad.cpp  extract_shaders.pl  single2forks.c  single2rsrc.c
(+1163 files in other folders)
